--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html {
   scroll-behavior: smooth;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
@@ -47,7 +47,6 @@ html {
 }
 
 footer {
-  /* position: relative; */
   min-width: 100vw;
   background-color: #222;
   height: 20em;
@@ -296,21 +295,31 @@ span.created-at {
   margin: 0 auto 0 auto;
 }
 
-.drop-menu {
-  position: fixed;
-  z-index: 150;
-  min-width: 100vw;
-  height: 100vh;
-  align-content: center;
-  transition: 0.5s;
-}
-
-.drop-menu-overlay {
+/* .drop-menu-overlay {
   position: fixed;
   z-index: 100;
   min-width: 100vw;
   height: 100vh;
-  background-color: #14a9b3;
+  background-color: #e5e5e5;
+} */
+
+.drop-menu {
+  position: fixed;
+  background-color: #e5e5e5;
+
+  z-index: 150;
+  width: 100vw;
+  height: 100vh;
+  align-content: center;
+  transition: 0.5s;
+  margin: auto;
+
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.drop-menu::-webkit-scrollbar {
+  width: 0;
 }
 
 #menu {
@@ -320,22 +329,21 @@ span.created-at {
   top: 15vh;
   list-style: none;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   margin: auto;
   padding: 0;
 }
 
-#menu a {
+#menu .menu-item {
   text-decoration: none;
   text-transform: uppercase;
-  background-color: #000;
-  color: #14a9b3;
+  background-color: #222;
+  color: #e5e5e5;
   display: block;
   width: 85%;
-  margin: 5px auto 5px auto;
+  margin: 0.2em auto 0.5em auto;
 
-  font-weight: 500;
-  font-size: 40px;
+  font-size: 2em;
   font-weight: 500;
   padding: 0.5em;
   letter-spacing: 0.1em;
@@ -388,11 +396,11 @@ span.created-at {
 
 #menu input {
   margin: auto auto 1em auto;
-  background-color: #14a9b3;
+  background-color: #e5e5e5;
   font-size: 2.5em;
   width: 80vw;
   text-align: left;
-  color: #e5e5e5;
+  color: #222;
   min-height: 50px;
   /* border-bottom: 0.08em dashed #e5e5e5; */
   border-top: 0px;
@@ -401,7 +409,7 @@ span.created-at {
 }
 
 #menu input::placeholder {
-  color: #e5e5e5;
+  color: whitesmoke;
   font-size: 1em;
   text-align: left;
 }
@@ -1001,11 +1009,11 @@ span.negative {
 }
 
 .fa {
-  position: absolute;
+  position: relative;
   color: #e5e5e5;
   font-size: 2.2em;
   display: inline-block;
-  padding: 0.2em 0.2em;
+
   transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -webkit-transition: all 0.3s ease 0s;
@@ -1028,4 +1036,38 @@ span.negative {
 
 .fa.fa-envelope:hover {
   background: #767676;
+}
+
+.social-block {
+  height: 5em;
+  width: 100vw;
+  margin-top: 5em;
+}
+
+.menu-social-bar {
+  width: fit-content;
+  height: 50%;
+  margin: auto;
+  position: relative;
+  text-align: center;
+}
+
+.menu-social-icon-container {
+  width: fit-content;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.menu-social-icon {
+  text-align: center;
+  height: 4em;
+  width: 4em;
+}
+
+.menu-social-icon > a {
+  color: #222;
 }
