--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 html {
-  scroll-behavior: smooth;
   overflow-x: hidden;
+}
+
+body {
+  scroll-behavior: smooth;
 }
 
 * {
@@ -44,19 +47,6 @@ html {
 .home-menu {
   position: absolute;
   left: 5%;
-}
-
-footer {
-  min-width: 100vw;
-  background-color: #222;
-  height: 20em;
-  display: flex;
-  bottom: 0;
-}
-
-footer h1 {
-  margin: auto;
-  color: white;
 }
 
 /* Home */
@@ -304,6 +294,8 @@ span.created-at {
 } */
 
 .drop-menu {
+  overflow-x: hidden;
+
   position: fixed;
   background-color: #e5e5e5;
 
@@ -382,15 +374,15 @@ span.created-at {
 
 #menu a > span.left-moji {
   position: absolute;
-  left: 5%;
-  font-size: 1.2em;
+  left: 10%;
+  font-size: 1.5em;
   animation: slide-left-moji 0.5s linear;
 }
 
 #menu a > span.right-moji {
   position: absolute;
-  right: 5%;
-  font-size: 1.2em;
+  right: 10%;
+  font-size: 1.5em;
   animation: slide-right-moji 0.5s linear;
 }
 
@@ -832,7 +824,7 @@ div[class^="paper-category-"] h5 span,
   z-index: -10;
 }
 
-.main-title-container {
+div.main-title-container {
   color: #222;
 }
 
@@ -849,6 +841,11 @@ div[class^="paper-category-"] h5 span,
   width: 10%;
   height: 100%;
   align-self: flex-start;
+}
+
+.main-list-item > a {
+  width: fit-content;
+  margin-right:0;
 }
 
 span[class^="main-rate-"] {
@@ -926,20 +923,32 @@ span.negative {
 }
 
 /* footer */
+
+footer {
+  min-width: 100vw;
+  background-color: #222;
+  height: 20em;
+  display: flex;
+  bottom: 0;
+}
+
+footer h1 {
+  margin: auto;
+  color: white;
+}
+
 .footer-content-container {
   position: relative;
   height: 80%;
-  width: 80%;
+  width: 90%;
   margin: auto;
   /* temp border */
-  border: 1px dashed #e5e5e5;
 }
 
 .social-bar {
   position: relative;
   height: 30%;
   width: 100%;
-  border: 1px dashed #e5e5e5;
   height: fit-content;
 }
 
@@ -952,16 +961,26 @@ span.negative {
 }
 
 .social-icon {
-  /* border: 1px dashed #e5e5e5; */
   height: 4em;
   width: 4em;
   padding-left: 1em;
 }
 
+.social-icon > .fa {
+  position: relative;
+  color: #e5e5e5;
+  font-size: 2.2em;
+  display: block;
+  transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+}
+
 .newsletter-bar {
   position: relative;
   height: 30%;
-  margin-top: 3em;
+  margin-top: 2em;
   text-align: left;
 }
 
@@ -975,19 +994,36 @@ span.negative {
   color: #e5e5e5;
 }
 
+.newsletter-form-container form {
+  font-size: 1.5em;
+  display: flex;
+}
+
 .newsletter-form-container input {
   background-color: #222;
   border-top: none;
   border-left: none;
   border-right: none;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid rgba(229, 229, 229, 0.2);
   margin-top: 0.5em;
+  width: 50vw;
+  color: #e5e5e5;
 }
 
 .newsletter-form-container input::placeholder {
-  color: #e5e5e5;
+  color: rgba(229, 229, 229, 0.2);
   font-size: 1em;
   text-align: left;
+}
+
+.newsletter-form-container input:focus {
+  outline: none;
+}
+
+.newsletter-form-container button {
+  background-color: #222;
+  color: rgba(229, 229, 229, 0.2);
+  border: none;
 }
 
 .column-container {
@@ -1006,36 +1042,6 @@ span.negative {
   display: flex;
   flex-direction: column;
   text-align: center;
-}
-
-.fa {
-  position: relative;
-  color: #e5e5e5;
-  font-size: 2.2em;
-  display: inline-block;
-
-  transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-}
-
-.fa:hover {
-  color: #fff;
-}
-
-.fa.fa-twitter:hover {
-  background: #5bbcec;
-}
-.fa.fa-linkedin:hover {
-  background: #0077b5;
-}
-.fa.fa-github:hover {
-  background: #6e5494;
-}
-
-.fa.fa-envelope:hover {
-  background: #767676;
 }
 
 .social-block {
