flipped order of ratings and paper content

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,20 @@ html {
   overflow-x: hidden;
 }
 
-body {
-  scroll-behavior: smooth;
-}
-
-* {
-  font-family: AtlasGroteskWeb, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 ::selection {
   background: #5f00f9;
   color: #fff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+a,
+p,
+input {
+  font-family: "Rubik", sans-serif;
 }
 
 .App {
@@ -157,21 +160,20 @@ body {
 }
 
 .home-header-inner h2 {
-  font-size: 1.3em;
+  /* font-size: 1.3em; */
   font-weight: 900;
   display: inline-block;
   margin: 0;
   vertical-align: middle;
   text-transform: uppercase;
   line-height: 1.2;
-  letter-spacing: 0.2em;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 .home-list-item {
   position: relative;
   height: 100%;
-  border-bottom: 1px dashed #e5e5e5;
+  /* border-bottom: 1px dashed #e5e5e5; */
   list-style: none;
   width: fit-content;
   margin: auto;
@@ -295,17 +297,14 @@ span.created-at {
 
 .drop-menu {
   overflow-x: hidden;
-
   position: fixed;
   background-color: #e5e5e5;
-
   z-index: 150;
   width: 100vw;
   height: 100vh;
   align-content: center;
   transition: 0.5s;
   margin: auto;
-
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
@@ -744,7 +743,7 @@ a.paper-filter-btn:active {
 .papers-list,
 .reviews-container {
   list-style: none;
-  width: 90vw;
+  width: 80vw;
   padding: 0;
   margin: 0 auto 0 auto;
   text-align: center;
@@ -822,6 +821,7 @@ div[class^="paper-category-"] h5 span,
 }
 
 .main-list-item {
+  position: relative;
   display: flex;
   height: 100%;
   border-bottom: 1px dashed #e5e5e5;
@@ -829,7 +829,7 @@ div[class^="paper-category-"] h5 span,
 
 .main-title-container {
   padding: 5px;
-  width: 90%;
+  width: 95%;
   text-align: start;
   z-index: -10;
   color: #222;
@@ -857,6 +857,10 @@ div[class^="paper-category-"] h5 span,
   width: 10%;
   height: 100%;
   align-self: flex-start;
+
+  position: absolute;
+  right: 0;
+  top: 10%;
 }
 
 .main-list-item > a {
@@ -865,16 +869,14 @@ div[class^="paper-category-"] h5 span,
 }
 
 span[class^="main-rate-"] {
-  background-color: whitesmoke;
+  background-color: #e5e5e5;
   display: inline-block;
-
   padding: 0;
   width: 20px;
   height: 20px;
   line-height: 20px;
   margin-bottom: 2px;
   color: #000 !important;
-
   vertical-align: baseline;
   border-radius: 0.5rem;
   position: relative;
@@ -911,7 +913,7 @@ span.negative {
   position: relative;
   text-align: left;
   width: 90vw;
-  height: 400px;
+  max-height: 400px;
   overflow: scroll;
   overflow-x: hidden;
 }
