--- a/src/App.css
+++ b/src/App.css
@@ -377,14 +377,6 @@ span.created-at {
   margin: 0 auto 0 auto;
 }
 
-/* .drop-menu-overlay {
-  position: fixed;
-  z-index: 100;
-  min-width: 100vw;
-  height: 100vh;
-  background-color: #e5e5e5;
-} */
-
 .drop-menu {
   overflow-x: hidden;
   position: fixed;
@@ -506,9 +498,10 @@ span.created-at {
 }
 
 .s {
-  height: 10vh;
+  height: 15vh;
   width: 100vw;
   position: relative;
+  /* margin-bottom: 2em; */
 }
 
 .user-body {
@@ -620,7 +613,7 @@ span.created-at {
 }
 
 .user-stats span {
-  color: #999;
+  color: #222;
 }
 
 span.paper-count {
@@ -805,13 +798,13 @@ div.paper-sort-btn-collection.sort-papers {
 }
 
 div.paper-sort-btn-collection.filter-papers {
-  left: 50%;
+  left: 40%;
   bottom: 0;
   position: absolute;
 }
 
 .filter-sort-buttons {
-  width: 80vw;
+  width: 90%;
   position: relative;
   margin: auto;
   height: 3em;
