--- a/src/App.css
+++ b/src/App.css
@@ -1249,3 +1249,15 @@ footer h1 {
 .menu-social-icon > a {
   color: #222;
 }
+
+
+.about-body {
+  margin-top: 2em;
+  min-height:800px;
+}
+
+.about-text-body {
+  width: 80%;
+  margin: auto;
+  text-align: justify;
+}
