--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
 
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   
 }
